...

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="Lessons"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"></TextView>

        <ImageView
            android:layout_width="150dp"
...
