...
            android:layout_gravity="center">

        </ImageView>

        <EditText
            android:id="@+id/shortAnswer"
            android:hint="Enter Answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:width="400dp"
            android:textColor="@color/black"
            android:textSize="20dp"></EditText>
...

            <Button
                android:id="@+id/submit_short"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Submit"
                android:textColor="@color/white"></Button>

        </LinearLayout>
    </LinearLayout>


...
